Add better custom pattern management and explanation to README

--- a/AppConfig.json
+++ b/AppConfig.json
@@ -224,5 +224,6 @@
         "\\b([\\w\\d]{3,64})\\s+number\\b",
         "\\b([\\w\\d]{3,64})\\s+pin\\b",
         "【([\\u4e00-\\u9fa5\\d\\w]+)"
-    ]
+    ],
+    "customPatterns": []
 }
