Added Custom Pattern for no provider name

--- a/AppConfig.json
+++ b/AppConfig.json
@@ -225,5 +225,14 @@
         "\\b([\\w\\d]{3,64})\\s+pin\\b",
         "【([\\u4e00-\\u9fa5\\d\\w]+)"
     ],
-    "customPatterns": []
+    "customPatterns": [
+
+{
+	“serviceName”: “no provider name”,
+“matcherPattern”: "\d{2,8}\nValid”,
+	“codeExtractorPattern”: "(\d{2,8})”
+}
+
+
+]
 }
