removed new line character

--- a/AppConfig.json
+++ b/AppConfig.json
@@ -228,7 +228,7 @@
    "customPatterns":[
       {
          "serviceName":"no provider name",
-         "matcherPattern":"\\d{2,8}\nValid",
+         "matcherPattern":"\\d{2,8}.+Valid",
          "codeExtractorPattern":"(\\d{2,8})"
       }
    ]
