Add support for some Chinese services
For supporting some SMS like "您的验证码123456" in china, I added "CN General". And I have checked this commit via Proxyman to make sure that it can work.

--- a/AppConfig.json
+++ b/AppConfig.json
@@ -256,5 +256,10 @@
          "matcherPattern":"[\\w\\d]{6,6} is your DigitalOcean verification code\\.",
          "codeExtractorPattern":"([\\w\\d]{6,6})"
       },
+      {
+         "serviceName":"CN General",
+         "matcherPattern":"验证码([(是)(为)]?)(\\d{4,8})",
+         "codeExtractorPattern":"(\\d{4,8})"
+      }
    ]
 }
