--- a/AppConfig.json
+++ b/AppConfig.json
@@ -260,6 +260,11 @@
          "serviceName":"CN General",
          "matcherPattern":"验证码([(是)(为)]?)(\\d{4,8})",
          "codeExtractorPattern":"(\\d{4,8})"
+      },
+      {
+         "serviceName":"Geico",
+         "matcherPattern":"GEICO: Your verification code is: \\w{6}. It expires in 10 minutes. Please do not reply to this message.",
+         "codeExtractorPattern":": (\\w{6})."
       }
    ]
 }
