--- a/AppConfig.json
+++ b/AppConfig.json
@@ -258,7 +258,7 @@
       },
       {
          "serviceName":"CN General",
-         "matcherPattern":"验证码([(是)(为)]?)(\\d{4,8})",
+         "matcherPattern":"验证码([是为：:\\s]*)(\\d{4,8})",
          "codeExtractorPattern":"(\\d{4,8})"
       },
       {
