--- a/AppConfig.json
+++ b/AppConfig.json
@@ -280,6 +280,11 @@
          "serviceName":"AOD",
          "matcherPattern":"AOD FCU security code: \\d{6}[\\s\\S]+",
          "codeExtractorPattern":"(\\d{6})"
+      },
+      {
+         "serviceName":"MPC",
+         "matcherPattern":"Dear [\\S]+\\s[\\S]+,[\\s]+Your security code is: \\d{5,6}[\\s]+This code expires in 15 minutes, so please complete this step as soon as possible.",
+         "codeExtractorPattern":"(\\d{5,6})"
       }
    ]
 }
