--- a/AppConfig.json
+++ b/AppConfig.json
@@ -301,10 +301,25 @@
          "matcherPattern":"Dear [\\s\\S]+,\n\nYour security code is: \\d{5,6}\n\nThis code expires in 15 minutes, so please complete this step as soon as possible.",
          "codeExtractorPattern":"(\\d{5,6})"
       },
-      {
+     {
          "serviceName": "pf-bank",
          "matcherPattern": "^[0-9]{8}\nValid 5 minutes\nDurata 5 minuti\nDurée 5 minutes\nGültig 5 Minuten$",
          "codeExtractorPattern": "^[0-9]{8}"
+      },
+      {
+         "serviceName": "Online Account Access",
+         "matcherPattern": "Don't share this code with anyone\\. Fraudsters can use it to access your online account and place orders\\. The code is valid for 20 minutes\\. Your code is [0-9A-Z]{5}\\.",
+         "codeExtractorPattern": "([0-9A-Z]{5})\\."
+      },
+      {
+         "serviceName": "Amex SafeKey",
+         "matcherPattern": "Your Amex SafeKey One-Time Password for INR \\d+\\.\\d\\d is (\\d{6})\\.\\sValid for \\d+ mins for Card ending xxxxx\\. Never share this password\\.",
+         "codeExtractorPattern": "(\\d{6})"
+      },
+      {
+         "serviceName": "Twitter",
+         "matcherPattern": "Twitter login code: (\\d{6,9})",
+         "codeExtractorPattern": "(\\d{6,9})"
       }
    ]
 }
