Fixes dock icon showing up and false positives on characters

--- a/TwoFHey/Info.plist
+++ b/TwoFHey/Info.plist
@@ -4,5 +4,7 @@
 <dict>
 	<key>NSAccessibilityUsageDescription</key>
 	<string>Accessiblity needed to automate copying codes to clipboard</string>
+	<key>LSUIElement</key>
+	<true/>
 </dict>
 </plist>
