--- a/AppConfig.json
+++ b/AppConfig.json
@@ -320,6 +320,11 @@
          "serviceName": "Twitter",
          "matcherPattern": "Twitter login code: (\\d{6,9})",
          "codeExtractorPattern": "(\\d{6,9})"
-      }
+      },
+      {
+         "serviceName": "myGov",
+         "matcherPattern": "^myGov Security: Your security code is (\\d{6}).",
+         "codeExtractorPattern": "(\\d{6})"
+      },   
    ]
 }
