--- a/AppConfig.json
+++ b/AppConfig.json
@@ -263,9 +263,14 @@
       },
       {
          "serviceName":"Geico",
-         "matcherPattern":"GEICO: Your verification code is: \\w{6}. It expires in 10 minutes. Please do not reply to this message.",
+         "matcherPattern":"GEICO: Your verification code is: \\w{6}\\. It expires in 10 minutes\\. Please do not reply to this message\\.",
          "codeExtractorPattern":": (\\w{6})."
       },
+      {
+         "serviceName":"Geico",
+         "matcherPattern":"GEICO: Your verification code is: \\w{6}\\. It expires in 10 minutes\\. Please do not share this code with anyone or reply to this message\\.",
+         "codeExtractorPattern":": (\\w{6})."
+     },
       {
          "serviceName":"DBS Bank",
          "matcherPattern":"To approve, use [A-Z]{3}-([0-9]{6}) within",
