--- a/AppConfig.json
+++ b/AppConfig.json
@@ -370,6 +370,11 @@
          "serviceName": "Spirica",
          "matcherPattern": "^Spirica$",
          "codeExtractorPattern": "Code de confirmation : (\S{6})"
+      },
+      {
+        "serviceName": "Aeroplan",
+        "matcherPattern": "Aeroplan[®] verification code",
+        "codeExtractorPattern": "Code:\\s*(\\d{6})"
       }
    ]
 }
